--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display+SC&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap&subset=latin-ext');
 
 body{
   background-color: rgb(245, 245, 245);
+    font-family: 'Quicksand', sans-serif;
+}
+
+::selection {
+    background-color: yellow;
+    color: black;
 }
 
 .App {
@@ -12,15 +18,24 @@ body{
 #gradientBar{
   width: 100%;
   height: 1vh;
-background: linear-gradient(90deg, rgba(3,170,92,1) 0%, rgba(14,166,133,1) 34%, rgba(107,158,249,1) 100%);
+  background: linear-gradient(90deg, rgba(49,117,194,1) 0%, rgba(0,191,191,1) 100%);
 }
 
-h1, h3{
+h1{
   font-family: 'Permanent Marker', cursive;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.10);
   width: fit-content;
   margin: auto;
-  margin-top: 1em;
+  margin-top: 0.5em;
+  font-size:calc(20px + 2vw);
+}
+
+h2{
+  font-family: 'Permanent Marker', cursive;
+}
+
+h3{
+  width: fit-content;
+  margin: 1em auto 1em auto;
 }
 
 nav {
@@ -38,11 +53,6 @@ nav {
   justify-content: space-around;
   align-items: center;
   list-style: none;
-}
-
-#logoStyle{
-font-family: 'Permanent Marker', cursive;
-list-style: none;
 }
 
 .navStyle{
@@ -82,9 +92,29 @@ a:hover{
   max-width: 480px;
 }
 
+.button{
+  display: block;
+  color: white;
+  background-color: rgba(0,191,191,1);
+  width: fit-content;
+  margin: auto;
+  margin-top: 1em;
+  padding: 1em;
+  border-radius: 0.3em;
+}
+
+.button:hover{text-decoration: none;
+background: linear-gradient(90deg, rgba(49,117,194,1) 0%, rgba(0,191,191,1) 100%);;
+}
+
 #vectorImage {
   width: 80%;
   max-width: 400px;
+}
+
+#profilePicture{
+  width: 100%;
+  filter: saturate(200%);
 }
 
 #aside{
@@ -94,18 +124,18 @@ a:hover{
   height: 100%;
 }
 
-#profilePicture{
-  width: 100%;
-  filter: saturate(200%);
-}
-
-p{
-   margin: 1em;
+#asideTitle{
+  border-bottom: 1px solid rgba(0, 0, 0, 0.10);
 }
 
 aside li{
   text-align: center;
   font-size: 1.1em;
+}
+
+p{
+   margin: 1em;
+  
 }
 
 ul{
@@ -133,6 +163,10 @@ ul{
   max-width: 80%;
 }
 
+.frameStyle a {
+  max-width: 80%;
+}
+
 .contactList li{
   margin: 1em 0 1em 0;
   max-width: 400px;
@@ -150,6 +184,10 @@ ul{
 
 .navFontAwesomeIcons{
   display: none !important;
+}
+
+nav {
+  justify-content: space-evenly;
 }
 
 .nav-links{
