--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@ body{
 h1{
   font-family: 'Permanent Marker', cursive;
   width: fit-content;
-  margin: auto;
-  margin-top: 0.5em;
+  margin: 2em auto 0;
+  /*margin-top: 0.5em;*/
   font-size:calc(20px + 2vw);
 }
 
@@ -84,8 +84,8 @@ a:hover{
 }
 
 #textContainer {
-  background-color: white;
-  border: 1px solid rgba(0, 0, 0, 0.10);
+  /*background-color: white;*/
+  /*border: 1px solid rgba(0, 0, 0, 0.10);*/
   width: fit-content;
   margin: auto;
   margin-top: 1em;
@@ -101,7 +101,10 @@ a:hover{
   margin: auto;
   margin-top: 1em;
   padding: 1em;
-  border-radius: 0.3em;
+}
+
+.frontPageButton{
+margin-bottom: 1em;
 }
 
 .button:hover{text-decoration: none;
@@ -147,14 +150,13 @@ ul{
   font-family: Quicksand, FontAwesome;
   border: 1px solid rgba(0, 0, 0, 0.10);
   padding: 0.5em;
-  border-radius: 0.3em;
   font-size: 1.0em;
 }
 
 .githubItem{
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.10);
-  width: 500px;
+  width: 350px;
   max-width: 60%;
   margin: auto;
   margin-bottom: 1em;
