--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700&display=swap&subset=latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap&subset=latin-ext');
 
 
@@ -23,7 +23,7 @@ body{
 }
 
 h1{
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Montserrat', sans-serif;
   width: fit-content;
   margin: 2em auto 0;
   /*margin-top: 0.5em;*/
@@ -31,11 +31,12 @@ h1{
 }
 
 h2{
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
 }
 
 h3{
-  width: fit-content;
+  font-family: 'Montserrat', sans-serif;
   margin: 1em auto 1em auto;
 }
 
@@ -57,12 +58,27 @@ nav {
 }
 
 .navStyle{
-color: black;
-text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
 .navStyle:hover {
-text-decoration: underline;
+text-decoration: none;
+}
+
+.navStyle::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background-color: black;
+  transition: width .3s;
+  margin: auto;
+}
+
+.navStyle:hover::after {
+  width: 100%;
+  transition: width .3s;
 }
 
 a{
@@ -100,7 +116,7 @@ a:hover{
   width: fit-content;
   margin: auto;
   margin-top: 1em;
-  padding: 1em;
+  padding: 0.7em;
 }
 
 .frontPageButton{
@@ -125,10 +141,6 @@ background: linear-gradient(90deg, rgba(49,117,194,1) 0%, rgba(0,191,191,1) 100%
   border-left: 1px solid rgba(0, 0, 0, 0.10);
   border-right: 1px solid rgba(0, 0, 0, 0.10);
   height: 100%;
-}
-
-#asideTitle{
-  border-bottom: 1px solid rgba(0, 0, 0, 0.10);
 }
 
 aside li{
@@ -161,6 +173,10 @@ ul{
   margin: auto;
   margin-bottom: 1em;
   padding: 1em;
+}
+
+.githubItem p {
+  margin: 0;
 }
 
 .frameStyle{
