--- a/src/App.css
+++ b/src/App.css
@@ -19,13 +19,14 @@ body{
 #gradientBar{
   width: 100%;
   height: 1vh;
+  min-height: 5px;
   background: linear-gradient(90deg, rgba(49,117,194,1) 0%, rgba(0,191,191,1) 100%);
 }
 
 h1{
   font-family: 'Montserrat', sans-serif;
   width: fit-content;
-  margin: calc(11vh + 2em) auto 0;
+  margin: 2em auto 0;
   /*margin-top: 0.5em;*/
   font-size:calc(20px + 2vw);
 }
@@ -51,6 +52,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   height: 10vh;
+  min-height: 50px;
   background-color: rgba(255, 255, 255, 0.9);
   border-bottom: 1px solid rgba(0, 0, 0, 0.10);
 }
@@ -101,9 +103,10 @@ a:hover{
   margin: auto;
   width: 100%;
   max-width: 1200px;
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: auto 300px;
+  margin-top: 11vh;
 }
 
 #textContainer {
@@ -142,8 +145,6 @@ background: linear-gradient(90deg, rgba(49,117,194,1) 0%, rgba(0,191,191,1) 100%
   background-color: white;
   border-left: 1px solid rgba(0, 0, 0, 0.10);
   border-right: 1px solid rgba(0, 0, 0, 0.10);
-  height: 100%;
-  margin-top: 11vh;
 }
 
 aside li{
@@ -151,14 +152,21 @@ aside li{
   font-size: 1.1em;
 }
 
-p{
-   margin: 1em;
-  
+aside ul {
+    display: grid;
+    grid-template-columns: auto auto;
+    margin: 1em;
 }
 
-ul{
+ul {
  list-style: none;
  padding-inline-start: 0;
+}
+
+#portfolioWrapper {
+  display: grid;  
+  margin-top: 11vh;
+  min-height: 100vh;
 }
 
 #loading{
@@ -175,8 +183,8 @@ ul{
 .githubItem{
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.10);
-  width: 350px;
-  max-width: 80%;
+  width: 80%;
+  max-width: 350px;
   margin: auto;
   margin-bottom: 1em;
   padding: 1em;
@@ -200,9 +208,42 @@ ul{
   max-width: 80%;
 }
 
+ #contactWrapper {
+  display: grid;  
+  margin-top: 11vh;
+  min-height: 100vh;
+ }
+
 .contactList li{
   margin: 1em 0 1em 0;
   max-width: 400px;
+}
+
+footer {
+  width: 100%;
+  background-color: black;
+  color: white;
+  margin: 0;
+  min-height: 11vh;
+  display: flex;
+  justify-content: center;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  margin: auto;
+}
+
+footer li {
+  height: fit-content;
+  margin: auto 1em auto 1em;
+}
+
+footer a {
+  color: white;
+  font-size: 150%;
 }
 
 @media only screen and (max-width:840px) {
@@ -211,29 +252,37 @@ ul{
   grid-template-columns: auto;
   }
 
-*{
-  font-size: 1.02em;
-}
+  *{
+    font-size: 1.02em;
+  }
 
-.navFontAwesomeIcons{
-  display: none !important;
-}
+  .navFontAwesomeIcons{
+    display: none !important;
+  }
 
-.nav-links{
-  justify-content: space-between;
-}
+  .nav-links{
+    justify-content: space-between;
+  }
 
-#profilePicture{
-  max-width: 65%;
-  margin-top: 2em;
-}  
+  #profilePicture{
+    max-width: 65%;
+    margin-top: 2em;
+  }  
 
-#aside{
-  margin-top: 0;
-}
+  #aside{
+    margin-top: 0;
+  }
 
-#textContainer {
-  max-width: 80%;
-}
+  #textContainer {
+    max-width: 80%;
+  }
 
+  footer li {
+    height: fit-content;
+    margin: auto 0.5em auto 0.5em;
+  }
+ 
+  footer a {
+    font-size: 130%;
+  }
 }
